--- a/catalog.html
+++ b/catalog.html
@@ -126,7 +126,7 @@
                
                <ul class="main-catalog_tabulation">
                    <li class="main-catalog_tabulation__number"><a href="#">1</a></li>
-                   <li class="main-catalog_tabulation__number"><a href="#">2</a></li>
+                   <li class="main-catalog_tabulation__number"><span>2</span></li>
                    <li class="main-catalog_tabulation__number"><a href="#">3</a></li>
                    <li class="main-catalog_tabulation__number"><a href="#">4</a></li>
                </ul>
