--- a/catalog.html
+++ b/catalog.html
@@ -137,9 +137,9 @@
     <footer class="footer">
         <div class="container">
             <span class="footer-text">Барбершоп «Бородинский»<br>
-            Адрес:г.Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-            <del>Как нас найти?</del><br>
-            Телефон +7 (495) 666-02-66</span>
+            Адрес:г.Санкт-Петербург, ул.Б.Конюшенная, д.19/8<br>
+            <a href="#">Как нас найти?</a><br>
+            Телефон:+7 (495) 666-02-66</span>
             
             <div class="footer-social">
                 <span class="footer-social_text">Давайте дружить!</span>
