added link to logo and footer

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
 <body>
     <header class="header">
        <div class="container">
-            <img src="http://placehold.it/50x60" alt="Это логотип" class="logo" width="50" height="60">
+            <a href="/"><img src="http://placehold.it/50x60" alt="Это логотип" class="logo" width="50" height="60"></a>
             <!-- пока что не понятно будет тут текст со специальным шрифтом, либо сам логотип -->
 
             <nav class="header-menu">
@@ -137,9 +137,9 @@
     <footer class="footer">
         <div class="container">
             <span class="footer-text">Барбершоп «Бородинский»<br>
-            Адрес:г.Санкт-Петербург, ул.Б.Конюшенная, д.19/8<br>
+            Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
             <a href="#">Как нас найти?</a><br>
-            Телефон:+7 (495) 666-02-66</span>
+            Телефон: +7 (812) 666-02-66</span>
             
             <div class="footer-social">
                 <span class="footer-social_text">Давайте дружить!</span>
@@ -153,7 +153,7 @@
             
             <div class="footer-dev">
                 <span class="footer-dev_text">Разработано:</span>
-                <div class="footer-dev_name">htmlacademy.ru</div>
+                <div class="footer-dev_name"><a href="http://htmlacademy.ru">htmlacademy.ru</a></div>
             </div>
         </div>
     </footer>
