--- a/catalog-item.html
+++ b/catalog-item.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <link href="css/style.css" rel="stylesheet">
     <title>Страница каталога</title>
 </head>
 <body>
