added icons, pictures and change img link

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -8,8 +8,7 @@
 <body>
     <header class="header">
        <div class="container">
-            <img src="http://placehold.it/50x60" alt="Это логотип" class="logo" width="50" height="60">
-            <!-- пока что не понятно будет тут текст со специальным шрифтом, либо сам логотип -->
+            <img src="img/logo.png" alt="Это логотип" class="logo" width="111" height="24">
 
             <nav class="header-menu">
                 <ul class="header-menu_ul">
@@ -38,11 +37,11 @@
             </nav>
             
             <div class="main-images">
-                <img src="http://placehold.it/300x300" alt="Картинка товара" class="main-images_img" width="300" height="300">
+                <img src="img/baxterofcalifornia1.jpg" alt="Картинка товара" class="main-images_img" width="516" height="554">
                 <div class="main-images_previews">
-                    <img src="http://placehold.it/150x150" alt="Картинка товара" class="main-images_img" width="150" height="150">
-                    <img src="http://placehold.it/150x150" alt="Картинка товара" class="main-images_img" width="150" height="150">
-                    <img src="http://placehold.it/150x150" alt="Картинка товара" class="main-images_img" width="150" height="150">
+                    <img src="img/baxterofcalifornia2.jpg" alt="Картинка товара" class="main-images_img" width="196" height="205">
+                    <img src="img/baxterofcalifornia3.jpg" alt="Картинка товара" class="main-images_img" width="196" height="205">
+                    <img src="img/baxterofcalifornia4.jpg" alt="Картинка товара" class="main-images_img" width="196" height="205">
                 </div>
             </div>
             
