--- a/catalog-item.html
+++ b/catalog-item.html
@@ -8,7 +8,7 @@
 <body>
     <header class="header">
        <div class="container">
-            <img src="img/logo.png" alt="Это логотип" class="logo" width="111" height="24">
+            <img src="img/logo.png" alt="Barbershop" class="logo" width="111" height="24">
 
             <nav class="header-menu">
                 <ul class="header-menu_ul">
@@ -37,11 +37,11 @@
             </nav>
             
             <div class="main-images">
-                <img src="img/baxterofcalifornia1.jpg" alt="Картинка товара" class="main-images_img" width="516" height="554">
+                <img src="img/baxterofcalifornia1.jpg" alt="Baxter of california" class="main-images_img" width="516" height="554">
                 <div class="main-images_previews">
-                    <img src="img/baxterofcalifornia2.jpg" alt="Картинка товара" class="main-images_img" width="196" height="205">
-                    <img src="img/baxterofcalifornia3.jpg" alt="Картинка товара" class="main-images_img" width="196" height="205">
-                    <img src="img/baxterofcalifornia4.jpg" alt="Картинка товара" class="main-images_img" width="196" height="205">
+                    <img src="img/baxterofcalifornia2.jpg" alt="Baxter of california" class="main-images_img" width="196" height="205">
+                    <img src="img/baxterofcalifornia3.jpg" alt="Baxter of california" class="main-images_img" width="196" height="205">
+                    <img src="img/baxterofcalifornia4.jpg" alt="Baxter of california" class="main-images_img" width="196" height="205">
                 </div>
             </div>
             
